--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
 VUE_APP_PREVIEW=true
-VUE_APP_API_BASE_URL=http://test.cloud.manager.topasst.com/index.php
+VUE_APP_API_BASE_URL=http://test.cloud.manager.topasst.com/
